--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,12 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ipykernel>=6.29.5",
+    "ipynb>=0.5.1",
     "manim>=0.19.0",
+    "matplotlib>=3.10.3",
     "numpy>=2.3.1",
     "pandas>=2.3.1",
+    "pillow>=11.3.0",
     "ruff>=0.12.3",
 ]
 
